# lumaray

./: .gitignore  Cargo.toml  README.md
lumaray/: Cargo.toml  build.rs
lumaray/src/: main.rs
lumaray/src/compositor/: color.rs  film.rs  image.rs  mod.rs
lumaray/src/parsers/: mod.rs  stl.rs
lumaray/src/render/: camera.rs  math.rs  mod.rs  scene.rs  texture.rs
lumaray/src/render/raytracable/: bvh.rs  mesh.rs  mesh_instance.rs  mod.rs  sphere.rs
lumaray/src/render/raytracable/bvh/: avx2.rs  avx512.rs  mod.rs  no_simd.rs
lumaray/src/utils/: alignedmem.rs  constconstrain.rs  hashindmap.rs  mod.rs
qndview/: Cargo.toml
qndview/src/: main.rs  render.rs  stl.rs
qndview/src/demo_models/: cube.rs  mod.rs
qndview/src/shaders/: facet.wgsl  wireframe.wgsl
