[package]
name = "lumaray"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "lumaray"
path = "src/main.rs"

[dependencies]
num-traits = "0.2.19"
png = "0.17.16"
rand = "0.8.5"
rayon = "1.10.0"
ultraviolet = { version = "0.9.2", features = ["f64"] }

[features]
default = ["avx2"]
no-simd = []
avx2 = []
avx512 = []

[build-dependencies]
